# linux_device_monitor

./: .gitignore  CMakeLists.txt
src/assets/qml/: main.qml
src/headers/: device_finder.hpp
src/sources/: device_finder.cpp  main.cpp
